--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -16,4 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker compose build --push
+      run: |
+        docker login --username samminhch --password ${{ secrets.DOCKERHUB_PASSWORD }}
+        docker compose build --push
