updated docker-compose context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   development:
     image: samminhch/testing:development
     build:
-      context: Docker/
+      context: .
       dockerfile: Docker/Dockerfile
       target: base
     tty: True
