--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && apt-get upgrade && apt-get --no-install-recommends -y inst
 
 RUN add-apt-repository ppa:neovim-ppa/unstable -y && \
     apt-get update && apt-get upgrade && apt-get --no-install-recommends -y install \
-    nala libtree-sitter-dev ripgrep python3-venv npm neovim &&\
+    libtree-sitter-dev ripgrep python3-venv npm neovim &&\
     apt-get clean && rm -rf /var/lib/apt/lists/* && \
     curl -sS https://starship.rs/install.sh | sh -s -- -y &> /dev/null
 
