--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -4,12 +4,12 @@ SHELL ["/bin/bash", "-c"]
 RUN sed -r -i 's,http://(.*).ubuntu.com,http://mirror.us-tx.kamatera.com,' /etc/apt/sources.list
 
 RUN apt-get update && apt-get upgrade && apt-get --no-install-recommends -y install \
-    curl git zsh software-properties-common && \
+    curl git zsh software-properties-common gnupg && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 RUN add-apt-repository ppa:neovim-ppa/unstable -y && \
     apt-get update && apt-get upgrade && apt-get --no-install-recommends -y install \
-    libtree-sitter-dev ripgrep python3-venv npm neovim &&\
+    nala libtree-sitter-dev ripgrep python3-venv npm neovim &&\
     apt-get clean && rm -rf /var/lib/apt/lists/* && \
     curl -sS https://starship.rs/install.sh | sh -s -- -y &> /dev/null
 
