--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -17,6 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: |
-        docker login --username samminhch --password ${{ secrets.DOCKERHUB_PASSWORD }}
-        docker compose build --push
+      run: docker login --username samminhch --password ${{ secrets.DOCKERHUB_PASSWORD }}
+    - name: Push Docker image
+      run: docker compose build --push
